frontend/style/index.css
body {
	overflow-y: hidden;
	overflow-x: hidden;

	background-color: #1a0000;
	/* background-image: url("/resources/background.jpg"); */
	/* background-repeat: no-repeat;
	background-size: cover;
	background-attachment: fixed;
	background-position: center; */
}

.sickBackground {
	position: fixed;
	left: 0;
	top: 0;
	width: 100vw;
	height: 100vh;

	opacity: 0;
	
	z-index: -100;
	transition: opacity 4s cubic-bezier(.57,.4,.16,1.05), scale 4s cubic-bezier(.57,.4,.16,1.05);

}

.sickBackground.loaded {
	opacity: 1;
	scale: 105%;
}


.titleText {
	margin-left: auto;
	margin-right: auto;
	margin-top: 15vh;
	margin-bottom: 20vh;

	width: 100%;
	text-align: center;
	
	color: white;

	font-family: 'Bebas Neue', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
	font-size: 184px;

	transform: rotate(-5deg);
}

.searchSuggestion {
	color: #aeaeae;
	opacity: 0;

	transition: opacity 1s ease-in-out;
}

.searchSuggestion a {
	text-decoration: none;
	transition: color 0.2s ease-in-out;
}

.searchSuggestion a:link, .searchSuggestion a:visited {
	color: rgb(145, 0, 0);
}

.searchSuggestion a:hover {
	color: rgb(227, 0, 0);
}

.searchSuggestion a:active {
	color: rgb(255, 0, 0);
}

.search {
	width: fit-content;
	text-align: center;
	font-size: 30px;
	background-color: rgba(0,0,0,0.2);
	border-radius: 10px;

	margin-left: auto;
	margin-right: auto;
}

.searchBoxGroup {
	padding: 10px;
}

#searchBox {
	display: inline-block;

	font-family: 'Oswald', sans-serif;
	font-size: 30px;

	width: 600px;
	padding: 3px;
	
	background-color: #260909;
	color: white;

	border-radius: 5px;
	border: none;
	vertical-align: middle;
}

#searchButton {
	display: inline-flex;
	align-items: center;
	justify-items: center;
	justify-content: center;
	width: 40px;
	height: 40px;
	
	line-height: 40px;
	background-color: #260909;
	border-radius: 3px;
	
	text-align: center;
	font-size: 40px;

	padding: 5px;
	margin: 5px;

	vertical-align: middle;

	cursor: pointer;

	transition: background-color 0.2s ease-in-out;
}

#searchButton:hover {
	background-color: #4b1111;
}

#searchIcon {
	width: 30px;
	height: 30px;
	opacity: 0.5;
	transition: opacity 0.2s ease-in-out;
}

#searchButton:hover #searchIcon {
	opacity: 1;
}

.userCard {
	position: absolute;
	bottom: 5px;
	right: 5px;
}

